--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
   <title>Verificador de Idade</title>
 </head>
 <body>
-
+  <header>
+    <h1>Verificador de Idade</h1>
+  </header>
+  <section>
+    <div>
+      <p>Ano de Nascimento:
+        <input type="number" name="txtano" id="txtano" min="0">
+      </p>
+      <p>Sexo:
+        <input type="radio" name="radsex" id="mas" checked>
+        <label for="masc">Masculino</label>
+        <input type="radio" name="radsex" id="fem">
+        <label for="fem">Feminino</label>
+      </p>
+      <p>
+        <input type="button" value="Verificar" ondblclick="verificar()">
+      </p>
+    </div>
+    <div id="res">
+      Preencha os dados acima para ver o resultado!
+    </div>
+    <div>
+    </div>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
